@@ -1,3 +1,9 @@
+2002-04-30  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* defs.h: Add support for turning off degenerate handling.
+	* defs.cpp: Ditto.
+	* camfr_wrap.cpp: Ditto.
+
 2002-04-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* camfr_wrap.cpp: Replace type_list by args.
